RestAssured class2 code

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,19 +11,35 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>getLisOfUsers</td>
+<td>getListOfUsersWithPathParametersWithGET</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>getListOfUsersWithQueryParameters</td>
+<td>getLisOfUsersWithGET</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>getListOfUsers</td>
+<td>updateUserWithPATCH</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>getListOfUsersWithPathParameters</td>
+<td>getListOfUsersWithQueryParametersWithGET</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>createUserWithPOST</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>updateUserWithPUT</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>deleteUserWithDELETE</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>getListOfUsersWithGET</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
