--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,5 +1,9 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>rest.apis.UserServiceTest.getListOfUsersWithQueryParameters</td></tr>
-<tr><td>rest.apis.UserServiceTest.getLisOfUsers</td></tr>
-<tr><td>rest.apis.UserServiceTest.getListOfUsersWithPathParameters</td></tr>
+<tr><td>rest.apis.UserServiceTest.getListOfUsersWithPathParametersWithGET</td></tr>
+<tr><td>rest.apis.UserServiceTest.getListOfUsersWithQueryParametersWithGET</td></tr>
+<tr><td>rest.apis.UserServiceTest.getLisOfUsersWithGET</td></tr>
+<tr><td>rest.apis.UserServiceTest.updateUserWithPATCH</td></tr>
+<tr><td>rest.apis.UserServiceTest.getListOfUsersWithGET</td></tr>
+<tr><td>rest.apis.UserServiceTest.updateUserWithPUT</td></tr>
+<tr><td>rest.apis.UserServiceTest.createUserWithPOST</td></tr>
 </table>
