RestAssured Class3 code

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,42 +4,38 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>rest.apis.UserServiceTest</td>
+<td>restapi.tests.UserServiceTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>getListOfUsersWithPathParametersWithGET</td>
+<td>getLisOfUsersByPageTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>getLisOfUsersWithGET</td>
+<td>createUserWithPojoObjectTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>updateUserWithPATCH</td>
+<td>getLisOfUsersTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>getListOfUsersWithQueryParametersWithGET</td>
+<td>getSingleUserTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>createUserWithPOST</td>
+<td>createUserWithJosnFileTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>updateUserWithPUT</td>
+<td>createUserWithStringDataTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>deleteUserWithDELETE</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>getListOfUsersWithGET</td>
+<td>createUserWithJosnStringTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
