--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c9af63">  <td>24/10/02 10:11:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserServiceTest.deleteUserWithDELETE()[pri:0, instance:rest.apis.UserServiceTest@5ba3f27a]">deleteUserWithDELETE</td> 
+<tr bgcolor="8bd0de">  <td>24/10/03 10:04:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserServiceTest.createUserWithJosnStringTest()[pri:0, instance:restapi.tests.UserServiceTest@5149f008]">createUserWithJosnStringTest</td> 
+  <td>main@1282788025</td>   <td></td> </tr>
+<tr bgcolor="8bd0de">  <td>24/10/03 10:04:37</td>   <td>1547</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserServiceTest.getLisOfUsersByPageTest()[pri:0, instance:restapi.tests.UserServiceTest@5149f008]">getLisOfUsersByPageTest</td> 
+  <td>main@1282788025</td>   <td></td> </tr>
+<tr bgcolor="8bd0de">  <td>24/10/03 10:04:39</td>   <td>3344</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserServiceTest.getSingleUserTest()[pri:0, instance:restapi.tests.UserServiceTest@5149f008]">getSingleUserTest</td> 
+  <td>main@1282788025</td>   <td></td> </tr>
+<tr bgcolor="8bd0de">  <td>24/10/03 10:04:30</td>   <td>-5719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserServiceTest.createUserWithJosnFileTest()[pri:0, instance:restapi.tests.UserServiceTest@5149f008]">createUserWithJosnFileTest</td> 
+  <td>main@1282788025</td>   <td></td> </tr>
+<tr bgcolor="8bd0de">  <td>24/10/03 10:04:39</td>   <td>3103</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserServiceTest.getLisOfUsersTest()[pri:0, instance:restapi.tests.UserServiceTest@5149f008]">getLisOfUsersTest</td> 
+  <td>main@1282788025</td>   <td></td> </tr>
+<tr bgcolor="8bd0de">  <td>24/10/03 10:04:37</td>   <td>1070</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserServiceTest.createUserWithStringDataTest()[pri:0, instance:restapi.tests.UserServiceTest@5149f008]">createUserWithStringDataTest</td> 
+  <td>main@1282788025</td>   <td></td> </tr>
+<tr bgcolor="8bd0de">  <td>24/10/03 10:04:36</td>   <td>571</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserServiceTest.createUserWithPojoObjectTest()[pri:0, instance:restapi.tests.UserServiceTest@5149f008]">createUserWithPojoObjectTest</td> 
   <td>main@1282788025</td>   <td></td> </tr>
 </table>
