--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,10 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>restapi.tests.UserServiceTest2.deleteUserWithDELETE</td></tr>
+<tr><td>restapi.tests.UserServiceTest2.updateUserWithJsonPartialStringTest</td></tr>
+<tr><td>restapi.tests.UserServiceTest2.updateUserWithJsonStringTest</td></tr>
+<tr><td>restapi.tests.UserServiceTest2.createUserWithStringDataTest</td></tr>
+<tr><td>restapi.tests.UserServiceTest2.createUserWithJosnStringTest</td></tr>
+<tr><td>restapi.tests.UserServiceTest2.createUserWithJosnFileTest</td></tr>
+<tr><td>restapi.tests.UserServiceTest2.getLisOfUsersByPageTest</td></tr>
+<tr><td>restapi.tests.UserServiceTest2.createUserWithPojoObjectTest</td></tr>
 </table>
